--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="m-table-container">
                 <div class="m-page-toolbar">
-                    <input type="text" class="m-input m-input-icon-add m-input-icon" placeholder="Tìm kiếm theo mã, họ tên">
+                    <input type="text" class="m-input m-input-icon-add m-input-icon" id="search-infor" placeholder="Tìm kiếm theo mã, họ tên">
                     <div class="m-icon-action">
                         <button class="m-icon-excel m-icon-btn"></button>
                         <button class="m-icon-refresh m-icon-btn"></button>
@@ -96,16 +96,22 @@
                             <div class="m-per-page">
                                 Số bản ghi/trang:
                                 <div class="m-custom-combobox">
-                                    <div class="m-current-value" id="btn-page">10
+                                    <div class="m-current-value" id="btn-page"><p>50</p>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><defs><style>.a,.b{fill:#666;}.a{opacity:0;}</style></defs><rect class="a" width="24" height="24"/><path class="b" d="M12,15.5a1,1,0,0,1-.71-.29l-4-4A1,1,0,0,1,8.71,9.79L12,13.1l3.3-3.18a1,1,0,1,1,1.38,1.44l-4,3.86A1,1,0,0,1,12,15.5Z"/></svg>
                                     </div>
                                     <div class="m-combobox-value" id="m-comboboxValues">
-                                        <a href="#" style="color: #50b83c;">10
+                                        <a href="#" ><p>10</p>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><defs><style>.a{fill:#2566e9;opacity:0;}.b{fill:#50b83c;}</style></defs><rect class="a" width="24" height="24"/><path class="b" d="M9.86,18a1,1,0,0,1-.73-.32L4.27,12.51a1,1,0,1,1,1.46-1.37l4.12,4.39,8.41-9.2a1,1,0,1,1,1.48,1.34l-9.14,10a1,1,0,0,1-.73.33Z"/></svg>
                                         </a>
-                                        <a href="#">25</a>
-                                        <a href="#">50</a>
-                                        <a href="#">100</a>
+                                        <a href="#"><p>25</p>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><defs><style>.a{fill:#2566e9;opacity:0;}.b{fill:#50b83c;}</style></defs><rect class="a" width="24" height="24"/><path class="b" d="M9.86,18a1,1,0,0,1-.73-.32L4.27,12.51a1,1,0,1,1,1.46-1.37l4.12,4.39,8.41-9.2a1,1,0,1,1,1.48,1.34l-9.14,10a1,1,0,0,1-.73.33Z"/></svg>
+                                        </a>
+                                        <a href="#" class="active"><p>50</p>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><defs><style>.a{fill:#2566e9;opacity:0;}.b{fill:#50b83c;}</style></defs><rect class="a" width="24" height="24"/><path class="b" d="M9.86,18a1,1,0,0,1-.73-.32L4.27,12.51a1,1,0,1,1,1.46-1.37l4.12,4.39,8.41-9.2a1,1,0,1,1,1.48,1.34l-9.14,10a1,1,0,0,1-.73.33Z"/></svg>
+                                        </a>
+                                        <a href="#"><p>100</p>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><defs><style>.a{fill:#2566e9;opacity:0;}.b{fill:#50b83c;}</style></defs><rect class="a" width="24" height="24"/><path class="b" d="M9.86,18a1,1,0,0,1-.73-.32L4.27,12.51a1,1,0,1,1,1.46-1.37l4.12,4.39,8.41-9.2a1,1,0,1,1,1.48,1.34l-9.14,10a1,1,0,0,1-.73.33Z"/></svg>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
